Fixed the navigation bar to collapse at a higher threshold by following the advice on Coderwall (at https://goo.gl/HAFf4v) and details about customizing Bootstrap in rails (at http://stackoverflow.com/questions/31687153).

--- a/app/assets/stylesheets/modern-business.css
+++ b/app/assets/stylesheets/modern-business.css
@@ -75,7 +75,7 @@ footer {
 
 /* Responsive Styles */
 
-@media(max-width:992px) {
+@media(max-width:991px) {
     .customer-img,
     .img-related {
         margin-bottom: 30px;
